WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312612
[JSC][WASM][Debugger] Fix ordering bugs in DebugServer::reset() and ExecutionHandler::reset()
https://bugs.webkit.org/show_bug.cgi?id=312612
Summary
[JSC][WASM][Debugger] Fix ordering bugs in DebugServer::reset() and Execution...
Yijia Huang
Reported
2026-04-17 16:29:31 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-17 16:29:37 PDT
<
rdar://problem/175043884
>
Yijia Huang
Comment 2
2026-04-17 16:31:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63011
EWS
Comment 3
2026-04-17 19:24:00 PDT
Committed
311504@main
(7d074dda6cbe): <
https://commits.webkit.org/311504@main
> Reviewed commits have been landed. Closing PR #63011 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug